--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     </div>
 
     <div id="D-coll-2" class="coll-2">
-      <h2>Wassup?</h2>
+      <h2>কি করছিস?</h2>
     </div>
 
     <div id="D-coll" class="coll">
-      <h2>Hi, 😃</h2>
+      <h2>Oi, 😃</h2>
     </div>
 
     <script
